@@ -1,34 +1,0 @@
-/*
- * Copyright 2010 Proofpoint, Inc.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package io.airlift.event.client;
-
-import com.google.inject.Guice;
-import com.google.inject.Injector;
-import org.testng.annotations.BeforeMethod;
-
-public class TestNullEventModule
-        extends AbstractTestNullEventClient
-{
-    @SuppressWarnings("deprecation")
-    @BeforeMethod
-    public void setup()
-            throws Exception
-    {
-        Injector injector = Guice.createInjector(
-                new NullEventModule());
-        eventClient = (NullEventClient) injector.getInstance(EventClient.class);
-    }
-}
